# codecov_test

./: .coveragerc  .gitignore  README.MD  calculator.py  calculator_test.py  codecov.yml  codecov_auto_push.sh  codecov_not_push.sh  misc.py  test_calculator.py
gcov_lcov/: CMakeLists.txt  arrayBoundary.cpp  arrayBoundary.h  codecov_auto_push.sh  comparison.cpp  comparison.h  compoundOperations.cpp  compoundOperations.h  edgeCase.cpp  edgeCase.h  functions.cpp  functions.h  math_functions.cpp  math_functions.h  recursion.cpp  recursion.h  test_math_functions.cpp  typeBoundary.cpp  typeBoundary.h
gcov_lcov/tests/ci_test/: CMakeLists.txt  test_math_functions.cpp
gcov_lcov/tests/daily_test/: CMakeLists.txt  test_math_functions.cpp
py-cov/: calculator.py  codecov_auto_push.sh  misc.py  pytest.ini
